[package]
name = "solar_cli"
version = "0.3.4"
authors = ["adria0 <adria@codecontext.io>", "glyph <glyph@mycelial.technology>"]
edition = "2018"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/mycognosist/solar"
default-run = "solar"
build = "build.rs"

[[bin]]
name = "solar"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features=["attributes", "tokio1"] }
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10"
hex = "0.4.0"
kuska-sodiumoxide = "0.2.5-0"
#kuska-ssb = { git =  "https://github.com/Kuska-ssb/ssb", branch = "master" }
kuska-ssb = { path =  "../../ssb" }
log = "0.4"
url = "2.3"

[dependencies.solar]
version = "~0.3.4"
path = "../solar"
