[package]
name = "solar_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
jsonrpc_client = { version = "0.7.1", features = ["macros", "reqwest"] }
reqwest = { version = "0.11", default-features = false, features = [ "json" ] }

[dev-dependencies]
tokio = { version = "1.36.0", features = [ "macros", "rt-multi-thread" ] }
