[package]
name = "solar_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
jsonrpc_client = { version = "0.7", features = ["macros", "reqwest"] }
reqwest = { version = "0.11", default-features = false, features = [ "json" ] }
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision"] }

[dev-dependencies]
tokio = { version = "1.36", features = [ "macros", "rt-multi-thread" ] }
